<resources>
    <string name="app_name">alphaX</string>
    <string name="action_settings">Settings</string>
    <string name="send_button">Send</string>
    <string name="name_blur">name</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- CRUD activity -->
    <string name="title_activity_main">Hello alpha</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New Person</string>
    <string name="edit">Edit Person</string>
    <string name="delete">Delete Person</string>
    <string name="save">Save Person</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="deletePerson">Confirm person deletion.</string>
    <string name="yes">Confirm</string>
    <string name="no">Cancel</string>
    <string name="title_activity_activity_edit">Person management</string>
    <string name="delete_person">Delete person?</string>
    <string name="list_student">List of students</string>
    <string name="list_person_text">List of persons</string>
    <string name="add_new_student">Add student</string>
    <string name="person">Person</string>
    <string name="getJsonBtn">Get json</string>
    <string name="parseJsonBtn">Parse json</string>
    <string name="textView">textview</string>
    <string name="insertUserBtn">Insert User</string>
    <string name="name_hint">name</string>
    <string name="email_hint">email</string>
    <string name="contact_hint">contact</string>
    <string name="password">password</string>
    <string name="addOutcomeBtn">Add outcome type</string>
    <string name="addOutcome">Add outcome</string>
    <string name="viewOutComeList">View outcome list</string>
    <string name="newBtn">New</string>
    <string name="outcomeTypeName">outcome type name</string>
    <string name="addBtn">Add</string>
    <string name="editBtn">Edit</string>
    <string name="outcomeType">Outcome type</string>
    <string name="outcome">Outcome</string>
    <string name="amount">amount</string>
    <string name="note">note</string>


</resources>
